--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "clean": "rm -rf .webpack node_modules dist out",
-    "postinstall": "sudo chown root ./node_modules/electron/dist/chrome-sandbox && sudo chmod 4755 ./node_modules/electron/dist/chrome-sandbox"
+    "postinstall": "if [ -f ./node_modules/electron/dist/chrome-sandbox ]; then sudo chown root ./node_modules/electron/dist/chrome-sandbox && sudo chmod 4755 ./node_modules/electron/dist/chrome-sandbox; fi"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
