--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - checkout
       - run:
           name: Install Node.js
-          command: choco install nodejs
+          command: choco install -y nodejs
       - run:
           name: Install Windows build tools
           command: npm install -g windows-build-tools
