--- a/package.json
+++ b/package.json
@@ -86,5 +86,8 @@
       "perMachine": true,
       "allowToChangeInstallationDirectory": true
     }
+  },
+  "optionalDependencies": {
+    "windows-build-tools": "^5.2.2"
   }
 }
