--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - dist/
+            - out/
 
   build-macos:
     executor: macos
@@ -45,7 +45,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - dist/
+            - out/
 
   build-linux:
     executor: linux
@@ -61,7 +61,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
-            - dist/
+            - out/
 
   deploy:
     executor: linux
