--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,6 +51,9 @@ jobs:
     executor: linux
     steps:
       - checkout
+      - run: |
+          wget http://deb.debian.org/debian/pool/main/liba/libarchive/libarchive13_3.4.3-2+b1_amd64.deb
+          sudo dpkg -i libarchive13_3.4.3-2+b1_amd64.deb
       - run: sudo apt-get install rpm --fix-missing
       - run:
           name: Install npm packages
