--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
     executor: linux
     steps:
       - checkout
-      - run: sudo apt-get update && sudo apt-get install libarchive13 rpm
+      - run: sudo apt-get update && sudo apt-get install libarchive13 rpm dpkg fakeroot
       - run:
           name: Install npm packages
           command: npm ci
