--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
           name: Upload binaries to GitHub Release
           command: |
             gh auth login --with-token < $GITHUB_TOKEN
-            gh release create v1.0.0 /workspace/dist/* --title "Release v1.0.0" --notes "Automated release of binaries"
+            gh release create v0.0.0 project/out/make/* --title "Release v1.0.0" --notes "Automated release of binaries"
 
 workflows:
   version: 2
