--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,9 +80,9 @@ jobs:
       - run:
           name: Upload binaries to GitHub Release
           command: |
-            ls
+            ls out
             gh auth login --with-token < $GITHUB_TOKEN
-            gh release create v0.0.0 out/make/* --title "Release v1.0.0" --notes "Automated release of binaries"
+            gh release create v0.0.0 out/* --title "Release v1.0.0" --notes "Automated release of binaries"
 
 workflows:
   version: 2
