--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -81,7 +81,7 @@ jobs:
           name: Upload binaries to GitHub Release
           command: |
             ls out
-            gh release create v0.0.0 out/* --title "Release v1.0.0" --notes "Automated release of binaries"
+            gh release create v0.0.0 out/make/deb/x64/* out/make/rpm/x64/* out/make/squirrel.windows/x64/StakeLauncher* out/make/zip/darwin/arm64/* --title "Release v1.0.0" --notes "Automated release of binaries"
 
 workflows:
   version: 2
