--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": ".",
     "outDir": "dist",
     "moduleResolution": "node",
+    "typeRoots": ["node_modules/@types", "src/@types"],
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "paths": {
