--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "from-schema": "^0.0.9",
     "node-loader": "^2.0.0",
+    "puppeteer": "^22.11.2",
+    "puppeteer-core": "^22.11.2",
     "react-responsive-modal": "^6.4.2",
     "sass": "^1.77.6",
     "sass-loader": "^14.2.1",
@@ -62,7 +64,6 @@
     "electron-squirrel-startup": "^1.0.1",
     "electron-store": "^9.0.0",
     "path-browserify": "^1.0.1",
-    "puppeteer": "^22.10.0",
     "puppeteer-in-electron": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
