--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,12 +11,12 @@
     "outDir": "dist",
     "moduleResolution": "node",
     "strict": true,
-    "typeRoots": ["node_modules/@types", "src/@types"],
+    "typeRoots": ["node_modules/@types", "frontend/@types"],
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "paths": {
       "*": ["node_modules/*"]
     }
   },
-  "include": ["src/**/*", "global.d.ts"]
+  "include": ["frontend/**/*", "global.d.ts"]
 }
