--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "publish": "electron-forge publish",
     "lint": "eslint --ext .ts,.tsx .",
     "clean": "rm -rf .webpack node_modules dist out settings.json cookies.json",
-    "postinstall": "node postinstall.mjs"
+    "postinstall": "ts-node postinstall.ts"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.4.0",
