--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,40 +13,40 @@ executors:
       - image: circleci/node:latest
 
 jobs:
-#  build-windows:
-#    executor: windows
-#    resource_class: windows.medium
-#    steps:
-#      - checkout
-#      - run:
-#          name: Install Node.js
-#          command: nvm install 20
-#      - run:
-#          name: Install npm packages
-#          command: npm ci
-#      - run:
-#          name: Build Windows binary
-#          command: npm run make
-#      - persist_to_workspace:
-#          root: .
-#          paths:
-#            - out/
-#
-#  build-macos:
-#    executor: macos
-#    resource_class: macos.m1.medium.gen1
-#    steps:
-#      - checkout
-#      - run:
-#          name: Install npm packages
-#          command: npm ci
-#      - run:
-#          name: Build macOS binary
-#          command: npm run make
-#      - persist_to_workspace:
-#          root: .
-#          paths:
-#            - out/
+  build-windows:
+    executor: windows
+    resource_class: windows.medium
+    steps:
+      - checkout
+      - run:
+          name: Install Node.js
+          command: nvm install 20
+      - run:
+          name: Install npm packages
+          command: npm ci
+      - run:
+          name: Build Windows binary
+          command: npm run make
+      - persist_to_workspace:
+          root: .
+          paths:
+            - out/
+
+  build-macos:
+    executor: macos
+    resource_class: macos.m1.medium.gen1
+    steps:
+      - checkout
+      - run:
+          name: Install npm packages
+          command: npm ci
+      - run:
+          name: Build macOS binary
+          command: npm run make
+      - persist_to_workspace:
+          root: .
+          paths:
+            - out/
 
   build-linux:
     executor: linux
@@ -109,11 +109,11 @@ workflows:
   version: 2
   build-and-deploy:
     jobs:
-      - build-windows
-      - build-macos
+#      - build-windows
+#      - build-macos
       - build-linux
       - deploy:
           requires:
-            - build-windows
-            - build-macos
+#            - build-windows
+#            - build-macos
             - build-linux
